# Robotics-RL

./: readme
MATLAB/PG/: launch_pg.m  pg_startup.m  pginitpolicyCallback.m  pginputCallback.m  testPG.m
MATLAB/PG-ELLA/: pg_ella_startup.m  pg_ellainputCallback.m  sendNextTask.m  sendPolicies.m  testPGELLA.m
lilee_follower/: CMakeLists.txt  package.xml
lilee_follower/cfg/: Follower.cfg
lilee_follower/launch/: follower.launch
lilee_follower/plugins/: nodelets.xml
lilee_follower/src/: lilee_follower.cpp
lilee_gazebo/: CMakeLists.txt  package.xml  terminal_cmds
lilee_gazebo/cmake/: lilee_gazeboConfig.cmake
lilee_gazebo/launch/: edit_maze.launch  edit_maze_pg.launch  edit_maze_qlearning.launch  launch_maze.launch  launch_maze_pg.launch  launch_maze_qlearning.launch
lilee_gazebo/src/: environment.cpp  world_control.cpp
lilee_gazebo/worlds/: lilee.world  maze.world  maze_backup.world  maze_pg.world  maze_qlearning.world  playground.world
lilee_rl_continuous/: CMakeLists.txt  package.xml
lilee_rl_continuous/launch/: pg-ella.launch  pg.launch
lilee_rl_continuous/msg/: ContinuousAction.msg  State.msg  TeleopCmd.msg
lilee_rl_continuous/param/: mux.yaml
lilee_rl_continuous/plugins/: nodelets.xml
lilee_rl_continuous/src/: actions.cpp  agent_pg-ella.cpp  agent_pg.cpp  environment.cpp  teleop.cpp  world_control.cpp
lilee_rl_continuous/srv/: AgentEnvironment.srv  WorldControl.srv
lilee_rl_discrete/: CMakeLists.txt  package.xml
lilee_rl_discrete/launch/: qlearning.launch
lilee_rl_discrete/msg/: AgentLocation.msg  GoalLocation.msg  State.msg  TeleopCmd.msg
lilee_rl_discrete/plugins/: nodelets.xml
lilee_rl_discrete/src/: actions.cpp  agent_qLearning.cpp  (+2 more)
lilee_tracker/: CMakeLists.txt  package.xml
(+30 files in other folders)
