<package>
  <name>lilee_follower</name>
  <version>2.2.5</version>
  <description>
       Follower for the turtlebot. Follows humans and robots around by following the centroid of a box points in front of the turtlebot.
  </description>

  <maintainer email="lilee@princeton.edu">Lisa Lee</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/turtlebot_apps</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_apps</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_apps/issues</url>

  <author email="tony.pratkanis@to.do">Tony Pratkanis</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>turtlebot_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>  
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>


  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml" />
  </export>
</package>
